unpackaged/main/default/objects/DocumentChecklistItem/fields/Compliance_Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Audit_Notes__c</fullName>
    <label>Compliance Audit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>