unpackaged/main/default/objects/DocumentChecklistItem/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <label>Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Government Photo ID</fullName>
            </value>
            <value>
                <fullName>Official High School Transcript</fullName>
            </value>
            <value>
                <fullName>College Transcript</fullName>
            </value>
            <value>
                <fullName>Signed Enrollment Agreement</fullName>
            </value>
            <value>
                <fullName>Financial Aid Verification</fullName>
            </value>
            <value>
                <fullName>VA / Military Document (DD214/COE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>