unpackaged/main/default/objects/DocumentChecklistItem/fields/Document_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Expiration_Date__c</fullName>
    <label>Document Expiration Date</label>
    <type>Date</type>
</CustomField>