unpackaged/main/default/objects/DocumentChecklistItem/fields/Mandatory_for_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_for_Enrollment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mandatory for Enrollment</label>
    <type>Checkbox</type>
</CustomField>