unpackaged/main/default/objects/DocumentChecklistItem/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unreadable / Blurry Image</fullName>
            </value>
            <value>
                <fullName>Expired Document</fullName>
            </value>
            <value>
                <fullName>Incomplete Pages</fullName>
            </value>
            <value>
                <fullName>Missing Signature</fullName>
            </value>
            <value>
                <fullName>Wrong Document Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>