unpackaged/main/default/objects/DocumentChecklistItem/fields/Uploaded_By_Student__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uploaded By Student</label>
    <type>Checkbox</type>
</CustomField>