unpackaged/main/default/objects/DocumentChecklistItem/fields/Verified_By_User__c.field-meta.xml
<CustomField>
    <fullName>Verified_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Verified_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>