unpackaged/main/default/objects/DocumentChecklistItem/fields/Verified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Verified_Date_Time__c</fullName>
    <label>Verified Date Time</label>
    <type>DateTime</type>
</CustomField>